5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/3094/executions/1674_1105.log
== TEST (2019-04-25 11:47:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")

if(b = lobo):
	y = "Casa: Stark"
elif(b = leao):
	y = "Casa: Lannister"
elif(b = veado):
	y = "Casa: Baratheon"
elif(b = dragao):
	y="Casa: Targaryen"
elif(b = rosa):
	y="Casa: Tyrell"
elif(b  = sol ):
	y="Casa: Martell"
elif(b = lula):
	y= "Casa: Greyjoy"
elif(b = esfolado):
	y="Casa: Bolton"
elif(b = turta):
	y="Casa: Tully"
else:
	y = "Brasao invalido"
print("Entrada: ", b)
print(y)
	
	
	
	
	
-- ERROR:
File "XXXX", line 5
    if(b = lobo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:48:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")
print("Entrada: ", b)
if(b = lobo):
	y = "Casa: Stark"
elif(b = leao):
	y = "Casa: Lannister"
elif(b = veado):
	y = "Casa: Baratheon"
elif(b = dragao):
	y="Casa: Targaryen"
elif(b = rosa):
	y="Casa: Tyrell"
elif(b  = sol ):
	y="Casa: Martell"
elif(b = lula):
	y= "Casa: Greyjoy"
elif(b = esfolado):
	y="Casa: Bolton"
elif(b = turta):
	y="Casa: Tully"
else:
	y = "Brasao invalido"

print(y)
	
	
	
	
	
-- ERROR:
File "XXXX", line 5
    if(b = lobo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:48:51) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")
print("Entrada: ", b)
if(b = lobo):
	y = "Casa: Stark"
elif(b = leao):
	y = "Casa: Lannister"
elif(b = veado):
	y = "Casa: Baratheon"
elif(b = dragao):
	y="Casa: Targaryen"
elif(b = rosa):
	y="Casa: Tyrell"
elif(b  = sol ):
	y="Casa: Martell"
elif(b = lula):
	y= "Casa: Greyjoy"
elif(b = esfolado):
	y="Casa: Bolton"
elif(b = turta):
	y="Casa: Tully"
else:
	y = "Brasao invalido"

print(y)
	
	
	
	
	
-- ERROR:
File "XXXX", line 5
    if(b = lobo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:49:15) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")
print("Entrada: ", b)
 if(b = lobo):
	y = "Casa: Stark"
elif(b = leao):
	y = "Casa: Lannister"
elif(b = veado):
	y = "Casa: Baratheon"
elif(b = dragao):
	y="Casa: Targaryen"
elif(b = rosa):
	y="Casa: Tyrell"
elif(b  = sol ):
	y="Casa: Martell"
elif(b = lula):
	y= "Casa: Greyjoy"
elif(b = esfolado):
	y="Casa: Bolton"
elif(b = turta):
	y="Casa: Tully"
else:
	y = "Brasao invalido"

print(y)
	
	
	
	
	
-- ERROR:
File "XXXX", line 5
    if(b = lobo):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:49:41) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")
print("Entrada: ", b)
if(b = lobo):
	y = "Casa: Stark"
elif(b = leao):
	y = "Casa: Lannister"
elif(b = veado):
	y = "Casa: Baratheon"
elif(b = dragao):
	y="Casa: Targaryen"
elif(b = rosa):
	y="Casa: Tyrell"
elif(b  = sol ):
	y="Casa: Martell"
elif(b = lula):
	y= "Casa: Greyjoy"
elif(b = esfolado):
	y="Casa: Bolton"
elif(b = turta):
	y="Casa: Tully"
else:
	y = "Brasao invalido"

print(y)
	
	
	
	
	
-- ERROR:
File "XXXX", line 5
    if(b = lobo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:50:57) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")
print("Entrada: ", b)
if(b = lobo):
	y = "Casa: Stark"
elif(b = leao):
	y = "Casa: Lannister"
elif(b = veado):
	y = "Casa: Baratheon"
elif(b = dragao):
	y="Casa: Targaryen"
elif(b = rosa):
	y="Casa: Tyrell"
elif(b  = sol ):
	y="Casa: Martell"
elif(b = lula):
	y= "Casa: Greyjoy"
elif(b = esfolado):
	y="Casa: Bolton"
elif(b = turta):
	y="Casa: Tully"
else:
	y = "Brasao invalido"

print(y)
	
	
	
	
	
-- ERROR:
File "XXXX", line 5
    if(b = lobo):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:52:21) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")
print("Entrada: ", b)
if(b = "lobo"):
	y = "Casa: Stark"
elif(b = leao):
	y = "Casa: Lannister"
elif(b = veado):
	y = "Casa: Baratheon"
elif(b = dragao):
	y="Casa: Targaryen"
elif(b = rosa):
	y="Casa: Tyrell"
elif(b  = sol ):
	y="Casa: Martell"
elif(b = lula):
	y= "Casa: Greyjoy"
elif(b = esfolado):
	y="Casa: Bolton"
elif(b = turta):
	y="Casa: Tully"
else:
	y = "Brasao invalido"

print(y)
	
	
	
	
	
-- ERROR:
File "XXXX", line 5
    if(b = "lobo"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:53:22) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")
print("Entrada: ", b)
if(b = "lobo"):
	y = "Casa: Stark"
elif(b = leao):
	y = "Casa: Lannister"
elif(b = veado):
	y = "Casa: Baratheon"
elif(b = dragao):
	y="Casa: Targaryen"
elif(b = rosa):
	y="Casa: Tyrell"
elif(b  = sol ):
	y="Casa: Martell"
elif(b = lula):
	y= "Casa: Greyjoy"
elif(b = esfolado):
	y="Casa: Bolton"
elif(b = turta):
	y="Casa: Tully"
else:
	y = "Brasao invalido"

print(y)
	
	
	
	
	
-- ERROR:
File "XXXX", line 5
    if(b = "lobo"):
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:54:16) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")
print("Entrada: ", b)
if(b == "lobo"):
	y = "Casa: Stark"
elif(b ==leao):
	y = "Casa: Lannister"
elif(b == veado):
	y = "Casa: Baratheon"
elif(b == dragao):
	y="Casa: Targaryen"
elif(b == rosa):
	y="Casa: Tyrell"
elif(b  == sol ):
	y="Casa: Martell"
elif(b == lula):
	y= "Casa: Greyjoy"
elif(b == esfolado):
	y="Casa: Bolton"
elif(b == turta):
	y="Casa: Tully"
else:
	y = "Brasao invalido"

print(y)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(b ==leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:54:26) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")
print("Entrada: ", b)
if(b == "lobo"):
	y = "Casa: Stark"
elif(b ==leao):
	y = "Casa: Lannister"
elif(b == veado):
	y = "Casa: Baratheon"
elif(b == dragao):
	y="Casa: Targaryen"
elif(b == rosa):
	y="Casa: Tyrell"
elif(b  == sol ):
	y="Casa: Martell"
elif(b == lula):
	y= "Casa: Greyjoy"
elif(b == esfolado):
	y="Casa: Bolton"
elif(b == turta):
	y="Casa: Tully"
else:
	y = "Brasao invalido"

print(y)
	
	
	
	
	
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    elif(b ==leao):
NameError: name 'leao' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-25 11:54:58) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")
print("Entrada: ", b)
if(b == "lobo"):
	y = "Casa: Stark"
elif(b =='leao'):
	y = "Casa: Lannister"
elif(b == 'veado'):
	y = "Casa: Baratheon"
elif(b == 'dragao'):
	y="Casa: Targaryen"
elif(b == 'rosa'):
	y="Casa: Tyrell"
elif(b  == 'sol' ):
	y="Casa: Martell"
elif(b == 'lula'):
	y= "Casa: Greyjoy"
elif(b == 'esfolado'):
	y="Casa: Bolton"
elif(b == 'turta'):
	y="Casa: Tully"
else:
	y = "Brasao invalido"

print(y)
	
	
	
	
	
-- OUTPUT:
Entrada:  lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-25 11:55:06) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("brasao: ")
print("Entrada: ", b)
if(b == "lobo"):
	y = "Casa: Stark"
elif(b =='leao'):
	y = "Casa: Lannister"
elif(b == 'veado'):
	y = "Casa: Baratheon"
elif(b == 'dragao'):
	y="Casa: Targaryen"
elif(b == 'rosa'):
	y="Casa: Tyrell"
elif(b  == 'sol' ):
	y="Casa: Martell"
elif(b == 'lula'):
	y= "Casa: Greyjoy"
elif(b == 'esfolado'):
	y="Casa: Bolton"
elif(b == 'turta'):
	y="Casa: Tully"
else:
	y = "Brasao invalido"

print(y)
	
	
	
	
	
-- EXECUTION TIME:
0.225464
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada:  lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada:  tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada:  dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
